perf(render): optimize hand rendering pipeline